feat: added resume and project chitros

--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
                 <div class="column">
                     <h2 class="name" id="name"> Hello <span id="wave"> 👋️</span>, I'm <strong> Dhruv Shah </strong></h2>
                     <h3 class="titles"> </h3>
-                    <p class="abouttext"> I'm a CSE undergrad from Vellore Institute of Technology. I'm a passionate programming who's interested in Full Stack development, Data Science and a bit of Competitive Coding. In my free time I like to learn new tech stacks and implement
+                    <p class="abouttext"> I'm a CSE undergrad from Vellore Institute of Technology. I'm a passionate programmer who's interested in Full Stack development, Data Science and a bit of Competitive Coding. In my free time I like to learn new tech stacks and implement
                         them in my projects or take part in hackathons.</p>
                     <div class="button-row">
-                        <a href="" class="downloadresume"> Download resume </a>
+                        <a href="/assets/About/Resume.pdf" class="downloadresume" target="_blank"> Download resume </a>
                         <a href="#contact" class="contact-button"> Contact me </a>
                     </div>
                 </div>
@@ -358,6 +358,21 @@
                 </li>
 
                 <li class="skills-ele">
+                  <i class="devicon-fastapi-plain"></i>
+                  <p class="skill-name"> FastAPI </p>
+                </li>
+
+                <li class="skills-ele">
+                    <i class="devicon-mysql-plain"></i>
+                    <p class="skill-name"> MySQL </p>
+                </li>
+
+                <li class="skills-ele">
+                    <i class="devicon-postgresql-plain"></i>
+                    <p class="skill-name"> Postgres </p>
+                </li>
+
+                <li class="skills-ele">
                     <i class="devicon-html5-plain"></i>
                     <p class="skill-name"> HTML </p>
                 </li>
@@ -388,18 +403,13 @@
                 </li>
 
                 <li class="skills-ele">
-                    <i class="devicon-fastapi-plain"></i>
-                    <p class="skill-name"> FastAPI </p>
-                </li>
-
-                <li class="skills-ele">
-                    <i class="devicon-mysql-plain"></i>
-                    <p class="skill-name"> MySQL </p>
-                </li>
-
-                <li class="skills-ele">
                     <i class="devicon-vuejs-plain"></i>
                     <p class="skill-name"> Vue.js </p>
+                </li>
+
+                <li class="skills-ele">
+                    <i class="devicon-docker-plain"></i>
+                    <p class="skill-name"> Docker </p>
                 </li>
 
                 <li class="skills-ele">
@@ -414,16 +424,18 @@
             <ul class="projects-list" id="projects-list">
 
                 <li class="projects-ele" onmouseover="projecthover(this)" onmouseout="projectleave(this)">
-                    <a href="http://github.com/Dhruv9449/VITime-CLI" class="project-link" target="_blank">
-                        <h3 class="project-name">
-                            <i class="fa-solid fa-terminal"></i> VITime CLI</h3>
-                        <p class="project-description"> CLI tool to view your timetable from terminal anytime! Built using Python and click </p>
-                        <video class="project-image">
-                          <source src="assets/Projects/VITime-CLI.mp4" type="video/mp4"></source>
-                          <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg"></source>
-                        </video>
-                    </a>
-                </li>
+                  <a href="http://github.com/Dhruv9449/Chitros" class="project-link" target="_blank">
+                      <h3 class="project-name">
+                          <i class="fa-solid fa-terminal"></i> Chitros </h3>
+                      <p class="project-description"> Social media backend API built on FastAPI, PostgreSQL </p>
+                      <video class="project-image">
+                        <source src="assets/Projects/Chitros.webm" type="video/webm"></source>
+                        <!-- <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg"></source> -->
+                      </video>
+                  </a>
+              </li>
+
+
 
 
                 <li class="projects-ele" onmouseover="projecthover(this)" onmouseout="projectleave(this)">
@@ -437,6 +449,17 @@
                     </a>
                 </li>
 
+                <li class="projects-ele" onmouseover="projecthover(this)" onmouseout="projectleave(this)">
+                    <a href="http://github.com/Dhruv9449/VITime-CLI" class="project-link" target="_blank">
+                        <h3 class="project-name">
+                            <i class="fa-solid fa-terminal"></i> VITime CLI</h3>
+                        <p class="project-description"> CLI tool to view your timetable from terminal anytime! Built using Python and click </p>
+                        <video class="project-image">
+                          <source src="assets/Projects/VITime-CLI.mp4" type="video/mp4"></source>
+                          <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg"></source>
+                        </video>
+                    </a>
+                </li>
 
                 <li class="projects-ele" onmouseover="projecthover(this)" onmouseout="projectleave(this)">
                     <a href="http://github.com/Dhruv9449/Portfolio" class="project-link" target="_blank">
