feat: made website responsive

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <div class="edu-content">
                             <h3 class="educationlevel"> Undergraduate (B.Tech in CSE) </h3>
                             <h4 class="school"> Vellore Institute of Technology, Vellore </h4>
-                            <p class="marks"> CGPA - 8.4 </p>
+                            <p class="marks"> CGPA - 8.5 </p>
                         </div>
                     </li>
 
@@ -429,8 +429,8 @@
                           <i class="fa-solid fa-terminal"></i> Chitros </h3>
                       <p class="project-description"> Social media backend API built on FastAPI, PostgreSQL </p>
                       <video class="project-image">
-                        <source src="assets/Projects/Chitros.webm" type="video/webm"></source>
-                        <!-- <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg"></source> -->
+                        <source src="assets/Projects/Chitros.webm" type="video/mp4">
+                        <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg">
                       </video>
                   </a>
               </li>
@@ -443,8 +443,8 @@
                         <h3 class="project-name"> <i class="fa-solid fa-blog"></i> iCoder </h3>
                         <p class="project-description"> Dynamic personal porfolio and blogging website built using Django </p>
                         <video class="project-image">
-                        <source src="assets/Projects/iCoder.mp4" type="video/mp4"></source>
-                        <source src="assets/Projects/iCoder.ogv" type="video/ogg"></source>
+                        <source src="assets/Projects/iCoder.mp4" type="video/mp4">
+                        <source src="assets/Projects/iCoder.ogv" type="video/ogg">
                       </video>
                     </a>
                 </li>
@@ -455,8 +455,8 @@
                             <i class="fa-solid fa-terminal"></i> VITime CLI</h3>
                         <p class="project-description"> CLI tool to view your timetable from terminal anytime! Built using Python and click </p>
                         <video class="project-image">
-                          <source src="assets/Projects/VITime-CLI.mp4" type="video/mp4"></source>
-                          <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg"></source>
+                          <source src="assets/Projects/VITime-CLI.mp4" type="video/mp4">
+                          <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg">
                         </video>
                     </a>
                 </li>
@@ -466,8 +466,8 @@
                         <h3 class="project-name"> <i class="fa-solid fa-user"></i> Portfolio website </h3>
                         <p class="project-description"> My Portfolio website built using plain HTML, CSS and Vanilla JS </p>
                         <video class="project-image">
-                          <source src="assets/Projects/Portfolio.mp4" type="video/mp4"></source>
-                          <source src="assets/Projects/Portfolio.ogv" type="video/ogg"></source>
+                          <source src="assets/Projects/Portfolio.mp4" type="video/mp4">
+                          <source src="assets/Projects/Portfolio.ogv" type="video/ogg">
                         </video>
                     </a>
                 </li>
