fix: education timeline size, button size

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         them in my projects or take part in hackathons.</p>
                     <div class="button-row">
                         <a href="/assets/About/Resume.pdf" class="downloadresume" target="_blank"> Download resume </a>
-                        <a href="#contact" class="contact-button"> Contact me </a>
+                        <a href="#contact" class="contact-button">Contact me</a>
                     </div>
                 </div>
             </div>
@@ -337,7 +337,7 @@
                         <div class="edu-content">
                             <h3 class="educationlevel"> Secondary School (CBSE) </h3>
                             <h4 class="school"> National Center For Excellence, Bangalore </h4>
-                            <p class="marks"> Percentage - 91.8%</p>
+                            <p class="marks"> Percentage - 91.8% </p>
                         </div>
                     </li>
                 </ul>
@@ -371,6 +371,13 @@
                     <i class="devicon-postgresql-plain"></i>
                     <p class="skill-name"> Postgres </p>
                 </li>
+
+                <li class="skills-ele">
+                    <i class="devicon-sqlalchemy-plain"></i>
+                    <p class="skill-name"> Sqlalchemy </p>
+                </li>
+
+
 
                 <li class="skills-ele">
                     <i class="devicon-html5-plain"></i>
@@ -426,8 +433,8 @@
                 <li class="projects-ele" onmouseover="projecthover(this)" onmouseout="projectleave(this)">
                   <a href="http://github.com/Dhruv9449/Chitros" class="project-link" target="_blank">
                       <h3 class="project-name">
-                          <i class="fa-solid fa-terminal"></i> Chitros </h3>
-                      <p class="project-description"> Social media backend API built on FastAPI, PostgreSQL </p>
+                        <i class="fa-solid fa-hashtag"></i> Chitros </h3>
+                      <p class="project-description"> Social media backend API built using FastAPI, PostgreSQL </p>
                       <video class="project-image">
                         <source src="assets/Projects/Chitros.webm" type="video/mp4">
                         <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg">
@@ -450,18 +457,6 @@
                 </li>
 
                 <li class="projects-ele" onmouseover="projecthover(this)" onmouseout="projectleave(this)">
-                    <a href="http://github.com/Dhruv9449/VITime-CLI" class="project-link" target="_blank">
-                        <h3 class="project-name">
-                            <i class="fa-solid fa-terminal"></i> VITime CLI</h3>
-                        <p class="project-description"> CLI tool to view your timetable from terminal anytime! Built using Python and click </p>
-                        <video class="project-image">
-                          <source src="assets/Projects/VITime-CLI.mp4" type="video/mp4">
-                          <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg">
-                        </video>
-                    </a>
-                </li>
-
-                <li class="projects-ele" onmouseover="projecthover(this)" onmouseout="projectleave(this)">
                     <a href="http://github.com/Dhruv9449/Portfolio" class="project-link" target="_blank">
                         <h3 class="project-name"> <i class="fa-solid fa-user"></i> Portfolio website </h3>
                         <p class="project-description"> My Portfolio website built using plain HTML, CSS and Vanilla JS </p>
@@ -471,6 +466,18 @@
                         </video>
                     </a>
                 </li>
+
+                <li class="projects-ele" onmouseover="projecthover(this)" onmouseout="projectleave(this)">
+                  <a href="http://github.com/Dhruv9449/VITime-CLI" class="project-link" target="_blank">
+                      <h3 class="project-name">
+                          <i class="fa-solid fa-terminal"></i> VITime CLI</h3>
+                      <p class="project-description"> CLI tool to view your timetable from terminal anytime! Built using Python and click </p>
+                      <video class="project-image">
+                        <source src="assets/Projects/VITime-CLI.mp4" type="video/mp4">
+                        <source src="assets/Projects/VITime-CLI.ogv" type="video/ogg">
+                      </video>
+                  </a>
+              </li>
 
             </ul>
 
