chore: added skills

--- a/index.html
+++ b/index.html
@@ -363,6 +363,11 @@
                 </li>
 
                 <li class="skills-ele">
+                  <i class="devicon-go-plain"></i>
+                  <p class="skill-name"> Go </p>
+                </li>
+
+                <li class="skills-ele">
                     <i class="devicon-mysql-plain"></i>
                     <p class="skill-name"> MySQL </p>
                 </li>
@@ -402,6 +407,11 @@
                 <li class="skills-ele">
                     <i class="devicon-cplusplus-plain"></i>
                     <p class="skill-name"> C++ </p>
+                </li>
+
+                <li class="skills-ele">
+                    <i class="devicon-java-plain"></i>
+                    <p class="skill-name"> Java </p>
                 </li>
 
                 <li class="skills-ele">
